# api-rappi

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  database.py  main.py  models.py  schemas.py
app/routes/: auth.py  orders.py
app/static/: app.js  index.html  style.css
